--- a/foundry.toml
+++ b/foundry.toml
@@ -2,4 +2,5 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+solc = "0.8.18"
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
