--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,9 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 solc = "0.8.18"
+fuzz_runs = 5000
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[rpc_endpoints]
+mainnet = "${ALCHEMY_url}"
+# rinkeby = "${RINKEBY_RPC}"
